--- a/src/main/resources/com/converter/divisasntempconverter/menuPrincipal.fxml
+++ b/src/main/resources/com/converter/divisasntempconverter/menuPrincipal.fxml
@@ -2,6 +2,7 @@
 
 <?import java.net.URL?>
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -9,7 +10,6 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -47,7 +47,15 @@
                         <TextField fx:id="inputMoneda_txtfield" layoutX="16.0" layoutY="112.0" prefHeight="160.0" prefWidth="224.0" />
                         <ChoiceBox fx:id="monedaDestino_choicebx" layoutX="368.0" layoutY="61.0" prefHeight="25.0" prefWidth="216.0" />
                         <TextField fx:id="outputMoneda_txtfield" layoutX="370.0" layoutY="112.0" prefHeight="160.0" prefWidth="213.0" />
-                        <Label layoutX="268.0" layoutY="159.0" prefHeight="67.0" prefWidth="65.0">
+                        <Button fx:id="convertir_button" layoutX="242.0" layoutY="290.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="119.0" text="CONVERTIR">
+                           <font>
+                              <Font name="System Bold" size="15.0" />
+                           </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
+                        <Button fx:id="intercambiarMoneda_button" layoutX="260.0" layoutY="155.0" mnemonicParsing="false">
                            <graphic>
                               <ImageView fx:id="intercambiarMoneda_img" fitHeight="67.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -58,13 +66,7 @@
                                  </cursor>
                               </ImageView>
                            </graphic>
-                           <tooltip>
-                              <Tooltip text="Intercambiar" />
-                           </tooltip>
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor>
-                        </Label>
+                        </Button>
                      </children>
                   </AnchorPane>
             </content>
@@ -82,7 +84,7 @@
                            <font>
                               <Font size="13.0" />
                            </font></TextArea>
-                        <RadioButton layoutX="70.0" layoutY="103.0" mnemonicParsing="false" text="Grados Celsius" />
+                        <RadioButton layoutX="70.0" layoutY="103.0" mnemonicParsing="false" selected="true" text="Grados Celsius" />
                         <RadioButton layoutX="241.0" layoutY="103.0" mnemonicParsing="false" text="Grados Fahrenheit" />
                         <RadioButton layoutX="431.0" layoutY="103.0" mnemonicParsing="false" text="Kelvin" />
                         <Text layoutX="253.0" layoutY="166.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Conversiones">
